--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,19 @@ version = "1.0.0-DEV"
 [deps]
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 Graphs = "1.12.0"
 LinearAlgebra = "1.11.0"
+LinearSolve = "3.3.1"
+Plots = "1.40.9"
+ProgressBars = "1.5.1"
+SparseArrays = "1.11.0"
 StaticArrays = "1.9.12"
 julia = "1.6.7"
 
